# mcp-cli

./: CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  PROMPTS.md  README.md
.github/workflows/: ci.yml
examples/prompts/: code-review.json  debug-error.json  write-commit-msg.json
src/: lib.rs  main.rs  protocol.rs  server.rs  tools.rs  watcher.rs
tests/: integration_test.rs
tools/: aws-s3-list.sh  date.sh
tools/github/: .auth.json  main.sh
